[3 - 4단계 방탈출 예약 대기] 종이(최우종) 미션 제출합니다. (#133)
* feat: 예약 대기를 포함한 예약 생성 기능 추가

* refactor: global 패키지명을 system으로 변경

* refactor: auth를 system 하위 패키지로 이동

* feat: 예약 대기 삭제 기능 추가

* docs: api 명세 수정

* feat: 예약 대기 순위 도메인 및 dto 추가

* refactor: 불필요한 주석 및 파일 삭제

* refactor: 불필요한 테스트 제거

* refactor: 불필요한 테스트 제거

* refactor: 피드백 적용